Added as reference for PlatformIO user

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = M5StickC
 
 ; Custom Serial Monitor speed (baud rate)
+;monitor_speed = 9600
 monitor_speed = 115200
