--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-;PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -12,8 +12,5 @@
 platform = espressif32
 board = m5stick-c
 framework = arduino
-lib_deps = M5StickC
-
-; Custom Serial Monitor speed (baud rate)
-;monitor_speed = 9600
 monitor_speed = 115200
+lib_deps = m5stack/M5StickCPlus@^0.1.0
